tests/testdata/errors/undefined_variable.pine
//@version=5
indicator("errors/undefined_variable")
// Test undefined variable access - should fail

var x = 10
var y = undefinedVar

// Expected error:
// error [undeclared-variable]: undeclared variable `undefinedVar`
